syntax = "proto3";
package VRDAVis;

enum EventType {
    EMPTY_EVENT = 0;
    REGISTER_VIEWER = 1;
    REGISTER_VIEWER_ACK = 2;
    VOLUME_DATA = 32;
}

enum SessionType {
    NEW = 0;
    RESUMED = 1;
}